# OpenGLings

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.9D2F8469FF455102.idx  glad.h.A553E1C69C5EFCB4.idx  glfw3.h.E106518A521A5E41.idx  khrplatform.h.35F1C00B2BD02EAA.idx  main.cpp.EC03CBB90630A71E.idx
src/: Shader.hpp  main.cpp  rainbow_triangle.cpp  shader_exercises.cpp  shader_fs_ex.txt  shader_vs.txt  shader_vs_ex.txt  two_traingles.cpp
